--- a/workflow-laravel-mix-6-2/src/styles/app.scss
+++ b/workflow-laravel-mix-6-2/src/styles/app.scss
@@ -1,3 +1,142 @@
 @import 'utils/variables';
 @import 'components/type';
 
+.menu-btn {
+	width: 50px;
+	height: 50px;
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	z-index: 10;
+	background: transparent;
+	//background: rgba(0, 0, 0, 0.1);
+	color: transparent;
+	border: 0;
+	cursor: pointer;
+    z-index: 150;
+
+    @media ( min-width: 1080px){
+      opacity: 0;
+      pointer-events: none;
+  
+    }
+}
+
+.menu-btn i {
+	display: block;
+	width: 100%;
+	height: 10%;
+	background: $c-text;
+	position: absolute;
+	right: 0%;
+	transition: all .3s;
+}
+
+.menu-btn i:nth-child(1) {
+	top: 0%;
+	transition: all .3s;
+}
+.menu-btn i:nth-child(2) {
+	top: 50%;
+	transform: translateY(-50%);
+}
+.menu-btn i:nth-child(3) {
+	bottom: 0%;
+}
+
+.menu-btn:hover i {
+	background: #444;
+	
+}
+.menu-btn:hover i:nth-child(1) {
+	top: 10%;
+}
+.menu-btn:hover i:nth-child(3) {
+	bottom: 10%;
+}
+
+.menu{
+  display: flex;
+  flex-direction: column;
+
+  @media ( min-width: 1080px){
+    opacity: 0;
+    pointer-events: none;
+
+  }
+
+}
+
+.block__btn{
+    position: absolute;
+    z-index: 99909;
+    height: 5em;
+    position: fixed;
+
+    @media ( min-width: 1080px){
+      opacity: 0;
+      pointer-events: none;
+  
+    }
+}
+
+///////////////////////////////////////////////////////////
+/// 
+/// 
+
+.menu-wrapper {
+	display: flex;
+  flex-direction: column;
+	justify-content: center;
+	align-items: end;
+	background: #ccc;
+	position: fixed;
+	top: 0;
+	right: 100%;
+	width: 50%;
+	height: 100vh;
+  z-index: 99800;
+  border-left: 1px solid $c-text;
+	transition: .3s ease-out;
+  background-color: $c-fond;
+  border-bottom: 2px solid $c-text;
+  border-right: 1px solid #000;
+
+  @media ( min-width: 1080px){
+    opacity: 0;
+    pointer-events: none;
+  
+  }
+
+  a{
+    text-transform: capitalize;
+    :hover{
+      border-right:1px solid #000;
+      transition: 0.3s;
+    }
+  }
+}
+
+/* open states */
+
+.menu-wrapper.open {
+	right: 0;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-btn.open i:nth-child(1) {
+	top: 50%;
+	transform: rotate(45deg) translateY(-50%);
+	transform-origin: right center;
+	width: 50%;
+}
+.menu-btn.open i:nth-child(3) {
+	bottom: 50%;
+	transform: rotate(-45deg) translateY(50%);
+	transform-origin: right center;
+	width: 50%;
+}
