--- a/workflow-laravel-mix-6-2/src/styles/components/_type.scss
+++ b/workflow-laravel-mix-6-2/src/styles/components/_type.scss
@@ -25,7 +25,7 @@ body {
   width: 100%;
   height: 100%;
   background: $c-fond;
-  z-index: 1000;
+  z-index: 100000000;
   border-bottom: 1px solid #000;
   transition: transform 0.6s ease-in-out;
   animation: intro 1s ease-out forwards;
@@ -40,6 +40,7 @@ body {
       transform: translateY(-100%)
   }
 }
+
 
 
 ////////////////////////:: Bruit
@@ -172,144 +173,6 @@ a{
 
 
 ///////////////////////////////////////////////////////////
-/// 
-/// 
-
-.section--nav{
-  opacity: 0;
-  pointer-events: none
-}
-
-.menu-btn {
-width: 50px;
-height: 50px;
-position: fixed;
-top: 20px;
-right: 20px;
-z-index: 10;
-background: transparent;
-//background: rgba(0, 0, 0, 0.1);
-color: transparent;
-border: 0;
-cursor: pointer;
-  z-index: 150;
-}
-
-
-
-.menu a{
-  font-family: "amandine", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  color: #444;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-
-
-.menu li{
-  border: 1px solid #444;
-  background-color: #FEFEFE;
-  border-radius: 30px;
-  box-shadow: 0 5px #444;
-  padding: 12px 18px;
-  background: #fefefe;
-  color: #444;
-  list-style: none;
-  cursor: pointer;
-  margin-bottom: 2em;
-  transition: 
-      box-shadow .3s, 
-      transform .3s;
-}
-
-.menu li:hover{
-  box-shadow: 0px 0px #444;
-  transform: translateY(5px);
-}
-
-.menu-btn i {
-display: block;
-width: 100%;
-height: 10%;
-background: #444;
-position: absolute;
-right: 0%;
-transition: all .3s;
-}
-
-.menu-btn i:nth-child(1) {
-top: 0%;
-transition: all .3s;
-}
-.menu-btn i:nth-child(2) {
-top: 50%;
-transform: translateY(-50%);
-}
-.menu-btn i:nth-child(3) {
-bottom: 0%;
-}
-
-.menu-btn:hover i {
-background: #444;
-
-}
-.menu-btn:hover i:nth-child(1) {
-top: 10%;
-}
-.menu-btn:hover i:nth-child(3) {
-bottom: 10%;
-}
-
-.block__btn{
-  width: 100%;
-  border-bottom: 1px solid #444;
-  height: 5em;
-  background-color: #FEFEFE;
-  position: fixed;
-}
-
-.menu-wrapper {
-display: flex;
-justify-content: center;
-  
-align-items: end;
-background: #ccc;
-position: fixed;
-top: 0;
-right: 100%;
-width: 70%;
-height: 100%;
-  border-left: 1px solid #444;
-transition: .3s ease-out;
-  background-color: #FEFEFE;
-  border-bottom: 2px solid #444;
-}
-
-/* open states */
-
-.menu-wrapper.open {
-right: 0;
-}
-
-.menu-btn.open i:nth-child(1) {
-top: 50%;
-transform: rotate(45deg) translateY(-50%);
-transform-origin: right center;
-width: 50%;
-}
-.menu-btn.open i:nth-child(3) {
-bottom: 50%;
-transform: rotate(-45deg) translateY(50%);
-transform-origin: right center;
-width: 50%;
-}
-
-
-
-
-///////////////////////////////////////////////////////////
 
 
 .reveal {
@@ -337,7 +200,7 @@ width: 50%;
   top: 0;
   backdrop-filter: blur(8px);
   width: 100%;
-  z-index: 800;
+  z-index: 99900;
 
   div{
     width: 100%;
@@ -347,12 +210,22 @@ width: 50%;
 
     .logo{
       padding-left: clamp(1.375rem, 0.875rem + 2.2222vw, 2.875rem);
+      position: relative;
+      z-index: 99999999999999;
     }
 
     .button_nav{
       padding-right: clamp(1.375rem, 0.875rem + 2.2222vw, 2.875rem);
       transition: 0.3s;
       text-transform: capitalize;
+      opacity: 0;
+      pointer-events: none;
+
+      @media ( min-width: 1080px){
+        opacity: 1;
+        pointer-events: all;
+    
+      }
 
       a{
         padding-right: 1Opx;
@@ -582,7 +455,7 @@ main{
     }
   }
 
-  :hover{
+  .BTN:hover{
     color: $c-fond;
     cursor: pointer;
   }
